--- a/html/login.html
+++ b/html/login.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <!-- connect css file -->
-    <link rel="stylesheet" href="/css/login-style.css" />
+    <link rel="stylesheet" href="../css/login-style.css" />
     <!-- fontawesome -->
-    <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,37 +17,43 @@
     />
   </head>
   <body>
-    <div class="login-container">
-      <h2 class="login-title">YKPO Cafe</h2>
-      <form class="login-form" method="post">
-        <div class="username-container">
-          <i class="fa-solid fa-user"></i>
-          <input
-            type="text"
-            name="username"
-            class="username"
-            placeholder="Username"
-            autocomplete="off"
-            required
-          />
-        </div>
+    <div class="container">
+      <div class="login-container">
+        <h2 class="login-title">YKPO Cafe</h2>
+        <form class="login-form" method="post">
+          <div class="email-container">
+            <i class="fa-solid fa-user"></i>
+            <input
+              type="text"
+              name="email"
+              class="email"
+              placeholder="Email"
+              autocomplete="off"
+              required
+            />
+          </div>
 
-        <div class="password-container">
-          <i class="fa-solid fa-key"></i>
-          <input
-            type="password"
-            name="password"
-            class="password"
-            placeholder="Passwrod"
-            autocomplete="off"
-            required
-          />
-        </div>
-        <input type="submit" value="Login" class="login-btn" />
-      </form>
-      <p>Doesn't have account ? <a href="">Signup</a></p>
+          <div class="password-container">
+            <i class="fa-solid fa-key"></i>
+            <input
+              type="password"
+              name="password"
+              class="password"
+              placeholder="Passwrod"
+              autocomplete="off"
+              required
+            />
+          </div>
+          <input type="submit" value="Login" class="login-btn" />
+        </form>
+        <p>Doesn't have account ? <a href="signup.html">Signup</a></p>
+      </div>
     </div>
-
+    <div class="loader">
+      <div class="one"></div>
+      <div class="two"></div>
+      <div class="three"></div>
+    </div>
     <!-- connect javascript file -->
     <script src="../js/login.js"></script>
   </body>
