--- a/html/login.html
+++ b/html/login.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
       rel="stylesheet"
     />
+    <!-- icon -->
+    <link rel="icon" href="../images/home.ico" />
   </head>
   <body>
     <div class="container">
@@ -24,7 +26,7 @@
           <div class="email-container">
             <i class="fa-solid fa-user"></i>
             <input
-              type="text"
+              type="email"
               name="email"
               class="email"
               placeholder="Email"
