--- a/html/signup.html
+++ b/html/signup.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
       rel="stylesheet"
     />
+    <!-- icon -->
+    <link rel="icon" href="../images/home.ico" />
   </head>
   <body>
     <div class="container">
