update home page

--- a/html/home.html
+++ b/html/home.html
@@ -1,62 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- connect css file -->
-    <link rel="stylesheet" href="../css/home-style.css" />
-    
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="../images/home.ico" />
-    <title>YKPO Cafe</title>
-  </head>
-  <body>
-    <!-- start header -->
-    <div class="header">
-      <div class="header-container">
-        <span class="logo">YKPO Cafe</span>
-        <div class="links">
-          <i class="fa-solid fa-bars  burger-icon"></i>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="reservation.html">Book Table</a></li>
-          </ul>
-        </div>
-        <a href="login.html">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- connect css file -->
+  <link rel="stylesheet" href="../css/home-style.css" />
+
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
+  <link rel="icon" href="../images/home.ico" />
+  <title>YKPO Cafe</title>
+</head>
+
+<body>
+  <!-- start header -->
+  <div class="header">
+    <div class="header-container">
+      <span class="logo">YKPO Cafe</span>
+      <div class="links">
+        <i class="fa-solid fa-bars  burger-icon"></i>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="reservation.html">Book Table</a></li>
+        </ul>
+      </div>
+      <a href="login.html">
         <i class="fa-regular fa-circle-user login-icon"></i></a>
-      </div>
     </div>
-    <!-- end header -->
-    <!-- start home section -->
-    <div class="home-container" id="home">
-      <div class="home-left">
-        <p>tasted flavors from around the world</p>
-       <a href="menu.html" class="order-btn"> Order Now   <i class="fa-solid fa-utensils"></i></a>
-      </div>
-      <div class="home-right"></div>
+  </div>
+  <!-- end header -->
+  <!-- start home section -->
+  <div class="home-container" id="home">
+    <div class="home-left">
+      <p>tasted flavors from around the world</p>
+      <a href="menu.html" class="order-btn"> Order Now <i class="fa-solid fa-utensils"></i></a>
     </div>
-    </div>
+    <div class="home-right"></div>
+  </div>
+  </div>
   <!-- end home section -->
 
-  <!-- start preloading -->
-    <div class="loader">
-      <div class="one"></div>
-      <div class="two"></div>
-      <div class="three"></div>
+  <!-- start about section -->
+  <div class="about-section" id="about">
+    <div class="image-container"></div>
+    <div class="info-container">
+      <div class="info-text">
+        <h3>the health food for wealthy mood</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia numquam quaerat quisquam consequatur,
+          assumenda non fuga aspernatur ipsa nulla eos quos amet tempore corrupti, accusamus nostrum quis est soluta
+          voluptatem!</p>
+      </div>
+      <div class="info-features">
+        <div class="feature">
+          <i class="fa-solid fa-cart-shopping"></i>
+          ordering online
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-clock"></i>
+          Pre-Booking
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-clock-rotate-left"></i>
+          24/7 services
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-location-dot"></i>
+          hygienic place
+        </div>
+      </div>
+      <a href="reservation.html">Book Your Table</a>
     </div>
+  </div>
+  <!-- end about section -->
+  <!-- start footer -->
+  <div class="footer">
+    <div class="left">
+      <div class="location footer-loc">
+        <i class="fa-solid fa-location-dot"></i>
+        <p>Jenin , AbuBaker street</p>
+      </div>
+      <div class="location footer-loc">
+        <i class="fa-solid fa-square-phone-flip"></i>
+        <p>+970568453235</p>
+      </div>
+      <div class="location footer-loc">
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:abdullahiyad10@gmail.com?subject=contact">Support@ykpocafe.com</a>
+      </div>
+    </div>
+    <div class="right">
+      <h3>Social Media</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate consectetur ex perspiciatis rerum quis
+        reiciendis saepe beatae necessitatibus eligendi eius natus, itaque aut facilis accusantium in alias iusto harum.
+      </p>
+      <div class="links">
+        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+    </div>
+  </div>
+  <!-- end footer -->
+  <!-- start preloading -->
+  <div class="loader">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+  </div>
   <!-- end preloading -->
 
-    <!-- connect javascript file -->
-    <script src="../js/home.js"></script>
-  </body>
+  <!-- connect javascript file -->
+  <script src="../js/home.js"></script>
+</body>
+
 </html>
