update home screen and make it responsive

--- a/html/home.html
+++ b/html/home.html
@@ -29,10 +29,12 @@
           <li><a href="menu.html">Menu</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="reservation.html">Book Table</a></li>
+          <li class="login-phone-btn"><a href="login.html">Login</a></li>
         </ul>
       </div>
-      <a href="login.html">
-        <i class="fa-regular fa-circle-user login-icon"></i></a>
+      <a href="login.html" class="login-icon">
+        <i class="fa-regular fa-circle-user login-icon"></i>
+      </a>
     </div>
   </div>
   <!-- end header -->
