--- a/html/login.html
+++ b/html/login.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <!-- connect css file -->
-    <link rel="stylesheet" href="../css/login-style.css" />
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/login-style.css"/>
+     <!-- fontAwesome -->
+     <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <!-- icon -->
-    <link rel="icon" href="../images/home.ico" />
+    
   </head>
   <body>
     <div class="container">
@@ -34,14 +34,13 @@
               required
             />
           </div>
-
           <div class="password-container">
             <i class="fa-solid fa-key"></i>
             <input
               type="password"
               name="password"
               class="password"
-              placeholder="Passwrod"
+              placeholder="Password"
               autocomplete="off"
               required
             />
