--- a/html/signup.html
+++ b/html/signup.html
@@ -39,7 +39,7 @@
             <i class="fa-solid fa-envelope"></i>
             <input
               type="email"
-              name="Email"
+              name="email"
               class="email input-style"
               placeholder="Email"
               autocomplete="off"
@@ -64,7 +64,7 @@
               type="password"
               name="password"
               class="password input-style"
-              placeholder="Passwrod"
+              placeholder="Password"
               autocomplete="off"
               required
             />
